--- a/style/contentStyle.css
+++ b/style/contentStyle.css
@@ -21,3 +21,14 @@ main {
     /* padding: 20px; Extra utrymme för innehållet i centrum */
     background-color: #ffffff; /* Färg för huvudinnehållet (kan ändras) */  
 }
+@media only screen and (max-width: 1027px) {
+    .left, .right {
+        display: none;
+    }
+
+}
+@media only screen and (min-width: 1028px) and (max-width: 1250px) {
+    .left, .right {
+        width: 7%;
+    }
+}
