--- a/style/homeStyle.css
+++ b/style/homeStyle.css
@@ -104,3 +104,16 @@ height: 20em;
     color: #fff; /* Textfärg på overlay */
     text-align: center;
   }
+  @media only screen and (max-width: 750px) {
+    .card-large {
+        margin: 0;
+        width: 100%;
+    }
+    
+    .card {
+        width: 100%;
+        margin: 0;
+        margin-bottom: 0;
+
+    }
+    }
