--- a/style/productStyles.css
+++ b/style/productStyles.css
@@ -31,11 +31,11 @@ body {
     flex-direction: row; /* Ändrad från "column" till "row" */
 }
 
-
 figure{
  margin: auto;
  width: 25%;
 }
+
 .product img {
     margin-left: 2em;
     max-width: 12em; /* Justerat från 100% till 40% */
@@ -72,3 +72,23 @@ button {
 .hidden {
     display: none;
 }
+@media only screen and (max-width: 1027px) {
+    .product img {
+        margin-left: 0.2em;
+        max-width: 12em; 
+        height: 12em;
+        margin-right: 10em;
+        
+    }
+    .headerText{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+}
+@media only screen and (min-width: 1028px) and (max-width: 1250px) {
+    .product img {
+        margin-left: 0.5em;        
+    }
+}
+
