--- a/style/menuStyle.css
+++ b/style/menuStyle.css
@@ -128,6 +128,9 @@ li:hover {
 
 /* Mobilanpassad CSS */
     @media only screen and (max-width: 1027px) {
+        body{
+            overflow: hidden;
+        }
 .navul {
       display: none;
       flex-direction: column;
@@ -187,7 +190,6 @@ li:hover {
     input{
         width: 15em;
         margin-left: 1em;
-
     }
     .search-icon {
         position: absolute;
